--- a/netlify.toml
+++ b/netlify.toml
@@ -7,7 +7,7 @@
     YARN_VERSION = "1.22.4"
     
 [[plugins]]
-package = "./index.js"
+package = "./src/index.js"
   [plugins.inputs.thresholds]
     performance = 0.9
     accessibility = 0.9
