--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint 'src/**/*.js'",
     "format": "prettier --write 'src/**/*.js'",
     "format:ci": "prettier --check 'src/**/*.js'",
-    "release": "CI=true semantic-release && npm publish"
+    "release": "HUSKY_SKIP_HOOKS=1 CI=true semantic-release && npm publish"
   },
   "keywords": [
     "netlify",
