feat: support multiple audits urls and paths

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-# Url to audit
-AUDIT_URL=https://www.example.com
-# Ignored when AUDIT_URL is configured
+# Audits
+AUDITS=[{"url":"https://www.example.com","thresholds":{"performance":0.5}},{"path":""},{"path":"route1"},{"path":"route2"}]
+# Ignored when a url is configured for an audit
 PUBLISH_DIR=FULL_PATH_TO_LOCAL_BUILD_DIRECTORY
 # JSON string of thresholds to enforce
 THRESHOLDS={"performance":0.9,"accessibility":0.9,"best-practices":0.9,"seo":0.9,"pwa":0.9}
