--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,14 @@
 name: netlify-plugin-lighthouse
 inputs:
+  # Deprecated, use audits
   - name: audit_url
     required: false
     description: Url of the site to audit, defaults to scanning the current built version of the site
+
   - name: thresholds
     required: false
-    description: Key value mapping of thresholds that will fail the build when not passed
+    description: Key value mapping of thresholds that will fail the build when not passed.
+
+  - name: audits
+    required: false
+    description: A list audits to perform. Each list item is an object with either a url/path to scan and an optional thresholds mapping.
