--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "local": "node -e 'require(\"./src/index.js\").onSuccess()'",
     "lint": "eslint 'src/**/*.js'",
     "format": "prettier --write 'src/**/*.js'",
+    "test": "jest",
     "format:ci": "prettier --check 'src/**/*.js'",
     "release": "HUSKY_SKIP_HOOKS=1 CI=true semantic-release && npm publish"
   },
@@ -46,6 +47,7 @@
     "@semantic-release/git": "^9.0.0",
     "eslint": "^7.0.0",
     "husky": "^4.0.7",
+    "jest": "^26.1.0",
     "prettier": "^2.0.0",
     "semantic-release": "^17.0.8"
   },
