--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,3 +40,5 @@ jobs:
         run: yarn lint
       - name: check formatting
         run: yarn format:ci
+      - name: run tests
+        run: yarn test
