--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Netlify Plugin to run Lighthouse on each build",
   "main": "src/index.js",
   "scripts": {
-    "local": "node -e 'require(\"./src/index.js\").onSuccess()'",
+    "local": "node -e 'require(\"./src/index.js\").onPostBuild()'",
     "lint": "eslint 'src/**/*.js'",
     "format": "prettier --write 'src/**/*.js'",
     "test": "jest",
