--- a/netlify.toml
+++ b/netlify.toml
@@ -1,21 +1,19 @@
 [build]
-  command = "echo 'no op'"
-  publish = "example"
+command = "echo 'no op'"
+publish = "example"
 
-  [build.environment]
-    YARN_FLAGS = "--frozen-lockfile"
-    YARN_VERSION = "1.22.4"
-    
+[build.environment]
+NODE_VERSION = "15"
+
 [[plugins]]
-  package = "./src/index.js"
+package = "./src/index.js"
 
-  [plugins.inputs.thresholds]
-    performance = 0.9
+[plugins.inputs.thresholds]
+performance = 0.9
 
-  [[plugins.inputs.audits]]
-    path = "route1"
-  [[plugins.inputs.audits]]
-    path = "route2"
-  [[plugins.inputs.audits]]
-    path = ""
-    
+[[plugins.inputs.audits]]
+path = "route1"
+[[plugins.inputs.audits]]
+path = "route2"
+[[plugins.inputs.audits]]
+path = ""
