--- a/manifest.yml
+++ b/manifest.yml
@@ -9,6 +9,10 @@ inputs:
     required: false
     description: Key value mapping of thresholds that will fail the build when not passed.
 
+  - name: output_path
+    required: false
+    description: Path to save the generated HTML Lighthouse report
+
   - name: audits
     required: false
     description: A list of audits to perform. Each list item is an object with either a url/path to scan and an optional thresholds mapping.
