--- a/netlify.toml
+++ b/netlify.toml
@@ -8,10 +8,14 @@ NODE_VERSION = "15"
 [[plugins]]
 package = "./src/index.js"
 
+[plugins.inputs]
+output_path = ".reports/lighthouse.html"
+
 [plugins.inputs.thresholds]
 performance = 0.9
 
 [[plugins.inputs.audits]]
+output_path = ".reports/route1.html"
 path = "route1"
 [[plugins.inputs.audits]]
 path = "route2"
