test: add Cypress tests

--- a/netlify.toml
+++ b/netlify.toml
@@ -21,3 +21,12 @@ path = "route1"
 path = "route2"
 [[plugins.inputs.audits]]
 path = ""
+
+[[plugins]]
+package = "netlify-plugin-cypress"
+# do not run tests after deploy (testing)
+[plugins.inputs]
+enable = false
+# run tests after build
+[plugins.inputs.postBuild]
+enable = true
