--- a/package.json
+++ b/package.json
@@ -42,9 +42,12 @@
   "devDependencies": {
     "@commitlint/cli": "^12.0.0",
     "@commitlint/config-conventional": "^12.0.0",
+    "cypress": "^7.1.0",
     "eslint": "^7.0.0",
+    "eslint-plugin-cypress": "^2.11.2",
     "husky": "^4.0.7",
     "jest": "^26.1.0",
+    "netlify-plugin-cypress": "^2.2.0",
     "prettier": "^2.0.0"
   },
   "husky": {
