--- a/netlify.toml
+++ b/netlify.toml
@@ -9,13 +9,13 @@ NODE_VERSION = "15"
 package = "./src/index.js"
 
 [plugins.inputs]
-output_path = ".reports/lighthouse.html"
+output_path = "reports/lighthouse.html"
 
 [plugins.inputs.thresholds]
 performance = 0.9
 
 [[plugins.inputs.audits]]
-output_path = ".reports/route1.html"
+output_path = "reports/route1.html"
 path = "route1"
 [[plugins.inputs.audits]]
 path = "route2"
