chore: add cypress plugin

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,12 @@ publish = "example"
 
 [build.environment]
 NODE_VERSION = "node"
+
+[[plugins]]
+package = "netlify-plugin-cypress"
+# do not run tests after deploy
+[plugins.inputs]
+enable = false
+# run tests after build
+[plugins.inputs.postBuild]
+enable = true
