--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "puppeteer": "^13.0.0"
   },
   "engines": {
-    "node": ">=14.x"
+    "node": ">=16.15.1"
   },
   "repository": {
     "type": "git",
