--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,23 @@ publish = "example"
 NODE_VERSION = "16.15.1"
 
 [[plugins]]
+package = "./src/index.js"
+
+[plugins.inputs]
+output_path = "reports/lighthouse.html"
+
+[plugins.inputs.thresholds]
+performance = 0.9
+
+[[plugins.inputs.audits]]
+output_path = "reports/route1.html"
+path = "route1"
+[[plugins.inputs.audits]]
+path = "route2"
+[[plugins.inputs.audits]]
+path = ""
+
+[[plugins]]
 package = "netlify-plugin-cypress"
 # do not run tests after deploy
 [plugins.inputs]
