--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-cypress": "^2.11.2",
     "husky": "^4.0.7",
     "jest": "^27.0.0",
+    "netlify-plugin-cypress": "^2.2.0",
     "prettier": "^2.0.0"
   },
   "husky": {
