chore: add id to release step

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -14,6 +14,7 @@ jobs:
           app-id: ${{ secrets.TOKENS_APP_ID }}
 
       - uses: GoogleCloudPlatform/release-please-action@v3
+        id: release
         with:
           token: ${{ steps.get-token.outputs.token }}
           release-type: node
