--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [17.x, '*']
+        node-version: [16.x, 17.x]
 
     steps:
       - uses: actions/checkout@v3
