--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "puppeteer": "^15.0.0"
   },
   "engines": {
-    "node": ">=16.15.1"
+    "node": ">=14.15 <18"
   },
   "repository": {
     "type": "git",
@@ -46,7 +46,7 @@
     "cypress": "^9.0.0",
     "eslint": "^7.0.0",
     "eslint-plugin-cypress": "^2.11.2",
-    "husky": "^8.0.0",
+    "husky": "^8.0.1",
     "jest": "^28.0.0",
     "netlify-plugin-cypress": "^2.2.0",
     "prettier": "^2.0.0"
