--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "compression": "^1.7.4",
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
+    "html-minifier": "^4.0.0",
     "lighthouse": "^9.6.3",
     "puppeteer": "^15.0.0"
   },
