Adds support for evn variable settings

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ AUDITS=[{"url":"https://www.example.com","thresholds":{"performance":0.5}},{"pat
 PUBLISH_DIR=FULL_PATH_TO_LOCAL_BUILD_DIRECTORY
 # JSON string of thresholds to enforce
 THRESHOLDS={"performance":0.9,"accessibility":0.9,"best-practices":0.9,"seo":0.9,"pwa":0.9}
+# SETTINGS
+SETTINGS={"locale":"en", "preset":"desktop"}
