--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,9 @@
   "extends": ["github>netlify/renovate-config:default"],
   "ignorePresets": [":prHourlyLimit2"],
   "semanticCommits": true,
-  "dependencyDashboard": true
+  "dependencyDashboard": true,
+  "schedule": ["9am every friday"],
+  "labels": ["area: dependencies"],
+  "stabilityDays": 3,
+  "prCreation": "not-pending"
 }
