--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "express": "^4.17.1",
     "html-minifier": "^4.0.0",
     "lighthouse": "^9.6.3",
-    "ts-jest": "^29.0.4",
-    "puppeteer": "^19.5.2"
+    "puppeteer": "^19.5.2",
+    "ts-jest": "^29.0.4"
   },
   "engines": {
     "node": ">=14.15 <19"
@@ -47,7 +47,7 @@
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
     "cypress": "^12.0.0",
-    "eslint": "^7.0.0",
+    "eslint": "^8.32.0",
     "eslint-plugin-cypress": "^2.11.2",
     "husky": "^8.0.1",
     "jest": "^29.0.0",
