--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Netlify Plugin to run Lighthouse on each build",
   "main": "src/index.js",
   "scripts": {
-    "local": "node -e 'require(\"./src/index.js\").onPostBuild()'",
+    "local": "node -e 'import(\"./src/index.js\").then(index => index.onPostBuild());'",
     "lint": "eslint 'src/**/*.js'",
     "format": "prettier --write 'src/**/*.js'",
-    "test": "jest",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "format:ci": "prettier --check 'src/**/*.js'"
   },
   "keywords": [
@@ -34,6 +34,7 @@
   "engines": {
     "node": ">=14.15 <19"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/netlify/netlify-plugin-lighthouse.git"
@@ -45,8 +46,9 @@
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
     "cypress": "^12.0.0",
-    "eslint": "^7.0.0",
+    "eslint": "^8.32.0",
     "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-import": "^2.27.4",
     "husky": "^8.0.1",
     "jest": "^29.0.0",
     "netlify-plugin-cypress": "^2.2.0",
