Split onPostBuild/onSuccess functionality

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Netlify Plugin to run Lighthouse on each build",
   "main": "src/index.js",
   "scripts": {
-    "local": "npm run local:success",
-    "local:success": "node -e 'import(\"./src/index.js\").then(index => index.onSuccess());'",
-    "local:postBuild": "node -e 'import(\"./src/index.js\").then(index => index.onPostBuild());'",
+    "local": "npm run local:onPostBuild && npm run local:onSuccess",
+    "local:onSuccess": "node -e 'import(\"./src/index.js\").then(index => index.onSuccess());'",
+    "local:onPostBuild": "node -e 'import(\"./src/index.js\").then(index => index.onPostBuild());'",
     "lint": "eslint 'src/**/*.js'",
     "format": "prettier --write 'src/**/*.js'",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --collect-coverage",
