--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@netlify/plugin-lighthouse",
-  "version": "4.1.0-alpha.1",
+  "version": "4.1.0-alpha.2",
   "description": "Netlify Plugin to run Lighthouse on each build",
   "main": "src/index.js",
   "scripts": {
     "local": "npm run local:onPostBuild && npm run local:onSuccess",
+    "local-verbose": "VERBOSE=true npm run local:onPostBuild && VERBOSE=true npm run local:onSuccess",
     "local:onSuccess": "node -e 'import(\"./src/index.js\").then(index => index.onSuccess());'",
     "local:onPostBuild": "node -e 'import(\"./src/index.js\").then(index => index.onPostBuild());'",
     "lint": "eslint 'src/**/*.js'",
