Tidying, code deduplication, rework onSuccess triggering method

--- a/manifest.yml
+++ b/manifest.yml
@@ -21,6 +21,6 @@ inputs:
     required: false
     description: Lighthouse-specific settings, used to modify reporting criteria
 
-  - name: thresholds_block_deploy
+  - name: run_on_success
     required: false
-    description: Switch to testing onPostBuild, where missing thresholds can block the deployment
+    description: (Beta) Run Lighthouse against the deployed site
