--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@netlify/plugin-lighthouse",
-  "version": "4.1.0-alpha.10",
+  "version": "4.0.7",
   "description": "Netlify Plugin to run Lighthouse on each build",
   "main": "src/index.js",
   "scripts": {
