--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "local-onsuccess": "LIGHTHOUSE_RUN_ON_SUCCESS=true node -e 'import(\"./src/index.js\").then(index => index.default()).then(events => events.onSuccess());'",
     "lint": "eslint 'src/**/*.js'",
     "format": "prettier --write 'src/**/*.js'",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --collect-coverage",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --collect-coverage --maxWorkers=1",
     "format:ci": "prettier --check 'src/**/*.js'"
   },
   "keywords": [
@@ -53,7 +53,8 @@
     "husky": "^8.0.1",
     "jest": "^29.0.0",
     "netlify-plugin-cypress": "^2.2.1",
-    "prettier": "^2.0.0"
+    "prettier": "^2.0.0",
+    "strip-ansi": "^7.0.1"
   },
   "husky": {
     "hooks": {
