--- a/renovate.json
+++ b/renovate.json
@@ -6,5 +6,6 @@
   "schedule": ["before 9am on Friday"],
   "labels": ["area: dependencies"],
   "stabilityDays": 3,
-  "prCreation": "not-pending"
+  "prCreation": "not-pending",
+  "postUpdateOptions": ["yarnDedupeHighest"]
 }
