--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
-    "cypress": "^12.0.0",
+    "cypress": "^13.17.0",
     "eslint": "^8.32.0",
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.27.4",
@@ -60,5 +60,8 @@
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
+  },
+  "resolutions": {
+    "koa": "^2.15.4"
   }
 }
