--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "author": "netlify-labs",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^4.1.0",
+    "chalk": "^5.6.2",
     "chrome-launcher": "^0.15.0",
     "compression": "^1.7.4",
     "dotenv": "^16.0.0",
@@ -47,14 +47,14 @@
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
     "cypress": "^13.17.0",
-    "eslint": "^8.32.0",
-    "eslint-plugin-cypress": "^2.11.2",
-    "eslint-plugin-import": "^2.27.4",
+    "eslint": "^8.57.1",
+    "eslint-plugin-cypress": "^2.15.2",
+    "eslint-plugin-import": "^2.32.0",
     "husky": "^8.0.1",
     "jest": "^29.0.0",
     "netlify-plugin-cypress": "^2.2.1",
-    "prettier": "^2.0.0",
-    "strip-ansi": "^7.0.1"
+    "prettier": "3.6.2",
+    "strip-ansi": "^7.1.2"
   },
   "husky": {
     "hooks": {
