--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "express": "^4.17.1",
     "html-minifier-terser": "^7.2.0",
     "lighthouse": "^9.6.3",
-    "puppeteer": "^24.29.1"
+    "puppeteer": "^24.8.2"
   },
   "engines": {
     "node": ">=18.14.0"
@@ -62,6 +62,12 @@
     }
   },
   "resolutions": {
-    "koa": "^2.15.4"
+    "koa": "^2.15.4",
+    "ws": "^8.17.1",
+    "cookie": "^0.7.0",
+    "tar-fs": "^2.1.4",
+    "cross-spawn": "^7.0.5",
+    "braces": "^3.0.3",
+    "@babel/helpers": "^7.26.10"
   }
 }
