--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint 'src/**/*.js'",
     "format": "prettier --write 'src/**/*.js'",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --collect-coverage --maxWorkers=1",
-    "format:ci": "prettier --check 'src/**/*.js'"
+    "format:ci": "prettier --check 'src/**/*.js'",
+    "prepare": "husky"
   },
   "keywords": [
     "netlify",
@@ -24,10 +25,10 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^5.6.2",
-    "chrome-launcher": "^0.15.0",
+    "chrome-launcher": "^1.2.1",
     "compression": "^1.7.4",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.1",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "html-minifier-terser": "^7.2.0",
     "lighthouse": "^9.6.3",
     "puppeteer": "24.8.2"
@@ -44,31 +45,16 @@
     "url": "https://github.com/netlify/netlify-plugin-lighthouse/issues"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.0.0",
-    "@commitlint/config-conventional": "^17.0.0",
-    "cypress": "^13.17.0",
-    "eslint": "^8.57.1",
-    "eslint-plugin-cypress": "^2.15.2",
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
+    "cypress": "^15.6.0",
+    "eslint": "^9.39.1",
+    "eslint-plugin-cypress": "^5.2.0",
     "eslint-plugin-import": "^2.32.0",
-    "husky": "^8.0.1",
-    "jest": "^29.0.0",
+    "husky": "^9.1.7",
+    "jest": "^30.2.0",
     "netlify-plugin-cypress": "^2.2.1",
     "prettier": "3.6.2",
     "strip-ansi": "^7.1.2"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
-  "resolutions": {
-    "koa": "^2.15.4",
-    "ws": "^8.17.1",
-    "cookie": "^0.7.0",
-    "tar-fs": "^2.1.4",
-    "cross-spawn": "^7.0.5",
-    "braces": "^3.0.3",
-    "@babel/helpers": "^7.26.10",
-    "@koa/cors": "^5.0.0"
   }
 }
